--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kimberly's Website</title>
-    <meta name="description" content="Kimberly's project portfolio">
+    <meta name="description" content="A computer science project portfolio.">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cousine">
+    
 </head>
 <body>
-    <h1>Kimberly's Website</h1>
-    
+<!-- Hero Section Start-->
+<section id= "hero">
+    <div class="hero container row">
+        <div class="col-md-6">
+            <h1>Hello World, my</h1>
+            <h1>name is Kimberly Cao</h1>
+            <h1>and I'm <span class="animate"></span></h1>
+        </div>
+        <script src="typed.js"></script>
+        <script>
+            var typed = new Typed('.animate', {
+              strings: [
+                  "a student.",
+                  "a developer.",
+                  "an ML enthusiast."
+              ],
+              typeSpeed: 50,
+              backSpeed: 50,
+              loop: true
+            });
+          </script>
+        <div class ="col-md-6 d-flex justify-content-center">
+            <img class= "img" src="/images/circle-cropped.png">
+        </div>
+    </div>
+</section>
+
+<section id="aboutme">
+    <div class= "aboutme container">
+        <h1>About Me</h1>
+    </div>
+</section>
+<!-- Hero Section End-->
 </body>
 </html>
