Added About Me, Projects, and Resume sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cousine">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <!-- Hero Section Start-->
@@ -33,16 +33,70 @@
             });
           </script>
         <div class ="col-md-6 d-flex justify-content-center">
-            <img class= "img" src="/images/circle-cropped.png">
+            <img class= "img" src="/images/profile-pic.png">
+        </div>
+    </div>
+</section>
+<!-- Hero Section End-->
+<section>
+    <div class= "container">
+        <div>
+            <h1 class= "section-title">About Me</h1>
+            <p>Hi there! My name is Kimberly and I'm a student at the University of Toronto. I'm always looking to add to my skill set, enjoy learning with friends, and working on group projects. In my spare time, I enjoy cooking and baking (because what's a meal without dessert?), 3D printing, and playing Tetris.</p>
         </div>
     </div>
 </section>
 
-<section id="aboutme">
-    <div class= "aboutme container">
-        <h1>About Me</h1>
+<section>
+    <div class= "container text-center">
+        <div>
+        <div class= "col">
+            <h1 class= "section-title">Projects</h1>
+            <p>What I've been working on:</p>
+        </div>
+<!--Cards to display projects-->
+        <div class="row">
+            <div class= "col-md-3 d-flex align-items-stretch">
+                <div class= "card text-center">
+                    <img src="/images/calendarly2.0.png" class= "card-img-top">
+                    <div class= "card-body">
+                        <h5 class= "card-title">Calendarly</h5>
+                        <p class = "card-text">A calendar app made using Dart and Flutter. It utilizes the Firebase Authentication SDK and Cloud Firestore in order for users to sign-in
+                            and view their tasks.</p>
+                        <a href="#"><i class= "fa fa-github" style= "font-size: 48px; color:rgb(107, 165, 219)"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class= "col-md-3 d-flex align-items-stretch">
+                <div class= "card text-center">
+                    <img src="/images/browser.png" class= "card-img-top">
+                    <div class= "card-body d-flex flex-column">
+                        <h5 class= "card-title">Personal Website</h5>
+                        <p class = "card-text">A computer science portfolio website made using HTML, CSS, JS, and Bootstrap.</p>
+                        <a href="#"><i class= "fa fa-github" style= "font-size: 48px; color:rgb(107, 165, 219)"></i></a>                    
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </div>
 </section>
-<!-- Hero Section End-->
+<!--Resume Section-->
+<section>
+    <div class= "container">
+        <div>
+            <h1 class= "section-title">Resume</h1>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class= "container">
+    <div>
+        <h1 class= "section-title">Contact Me</h1>
+
+        </div>
+    </div>
+</section>
 </body>
 </html>
