--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<section id= "navigation">
+    <div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarNavAltMarkup">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="#">Top</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="#">About Me</a>          
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="#">Technical Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="#">Technical Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="#">Contact Me</a>
+                </li>
+            </ul>
+        </div>
+        </div>
+      </nav>
+      </div>
+</section>
 <!-- Hero Section Start-->
 <section id= "hero">
     <div class="hero container row">
@@ -47,6 +79,17 @@
     </div>
 </section>
 
+<section id= "technical-skills">
+    <div class= "container">
+        <div>
+            <h1 class= "section-title">Technical Skills</h1>
+            <p>Here are some of the things that I know:</p>
+            <a class= "button" href="#">Resume</a>
+        </div>
+    </div>
+</section>
+
+
 <section>
     <div class= "container text-center">
         <div>
@@ -78,14 +121,6 @@
                 </div>
             </div>
         </div>
-        </div>
-    </div>
-</section>
-<!--Resume Section-->
-<section>
-    <div class= "container">
-        <div>
-            <h1 class= "section-title">Resume</h1>
         </div>
     </div>
 </section>
