Fixed loading animation

--- a/index.html
+++ b/index.html
@@ -144,10 +144,7 @@
 
 <!--Loader-->
 <div class="loader-wrapper">
-    <div id="loader">
-        <div id="shadow"></div>
-        <div id="box"></div>
-      </div>
+    <span class="loader"><span class="loader-inner"></span></span>
 </div>
 <!--Script file-->
 <script src="typed.js"></script>
