--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class ="col-md-4 d-flex justify-content-center">
-            <img class= "img" src="/images/profile-pic.png">
+            <img class= "img" src="images/profile-pic.png">
         </div>
     </div>
 </section>
@@ -148,7 +148,7 @@
         <div class="row">
             <div class= "col-md-3 d-flex align-items-stretch">
                 <div class= "card text-center">
-                    <img src="/images/calendarly2.0.png" class= "card-img-top">
+                    <img src="images/calendarly2.0.png" class= "card-img-top">
                     <div class= "card-body">
                         <h5 class= "card-title">Calendarly</h5>
                         <p class = "card-text">A calendar app made using Dart and Flutter. It utilizes the Firebase Authentication SDK and Cloud Firestore in order for users to sign-in
@@ -159,7 +159,7 @@
             </div>
             <div class= "col-md-3 d-flex align-items-stretch">
                 <div class= "card text-center">
-                    <img src="/images/browser.png" class= "card-img-top">
+                    <img src="images/browser.png" class= "card-img-top">
                     <div class= "card-body d-flex flex-column">
                         <h5 class= "card-title">Personal Website</h5>
                         <p class = "card-text">A computer science portfolio website made using HTML, CSS, JS, and Bootstrap.</p>
@@ -182,7 +182,7 @@
         <div class= "col-md-3 d-flex">
             <div class = "card text-center justify-content-center">
                 <div class= "card-body d-flex flex-column">
-                    <img src= "/images/envelope.png" alt= "" class= "img-fluid w-25 mb-3 mx-auto d-block">
+                    <img src= "images/envelope.png" alt= "" class= "img-fluid w-25 mb-3 mx-auto d-block">
                     <h3 class= "card-title">Email</h3>
                     <p class= "contact-card-text">kimberly.cao13@gmail.com</p>
                 </div>
@@ -191,7 +191,7 @@
                 <div class= "col-md-3 d-flex">
             <div class = "card text-center justify-content-center">
                 <div class= "card-body d-flex flex-column">
-                    <img src= "/images/linkedin.png" alt= "" class= "img-fluid w-25 mb-3 mx-auto d-block">
+                    <img src= "images/linkedin.png" alt= "" class= "img-fluid w-25 mb-3 mx-auto d-block">
                     <h3 class= "card-title">LinkedIn</h3>
                     <div class="contact-card-text">
                         <a href= "#">www.linkedin.com/in/kimberly-cao-407499146</a>
