--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- Hero Section Start-->
 <section id= "hero">
     <div class="hero container row">
-        <div class="col-md-8">
+        <div class="col-md-8 justify-content-center">
             <h1>Hello World, my</h1>
             <h1>name is Kimberly Cao</h1>
             <h1>and I'm <span class="animate"></span></h1>
@@ -194,7 +194,7 @@
                     <img src= "images/linkedin.png" alt= "" class= "img-fluid w-25 mb-3 mx-auto d-block">
                     <h3 class= "card-title">LinkedIn</h3>
                     <div class="contact-card-text">
-                        <a href= "#">www.linkedin.com/in/kimberly-cao-407499146</a>
+                        <a href= "www.linkedin.com/in/kimberlymaicao" target= "_blank">Click for my LinkedIn!</a>
                     </div>
                 </div>
             </div>
