Fixed LinkedIn link

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <img src= "images/linkedin.png" alt= "" class= "img-fluid w-25 mb-3 mx-auto d-block">
                     <h3 class= "card-title">LinkedIn</h3>
                     <div class="contact-card-text">
-                        <a href= "www.linkedin.com/in/kimberlymaicao" target= "_blank">Click for my LinkedIn!</a>
+                        <a href= "https://www.linkedin.com/in/kimberlymaicao/" target= "_blank">Click for my LinkedIn!</a>
                     </div>
                 </div>
             </div>
