Added recent projects

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                 </li>
             </ul>
         </div>
-        </div>
       </nav>
 <!--Navigation bar ends-->      
 
@@ -167,6 +166,26 @@
                     </div>
                 </div>
             </div>
+            <div class= "col-md-3 d-flex align-items-stretch">
+                <div class= "card text-center">
+                    <img src="images/Trackit.png" class= "card-img-top">
+                    <div class= "card-body">
+                        <h5 class= "card-title">TracKitchen</h5>
+                        <p class = "card-text">A kitchen inventory app made using Dart and Flutter. Firebase Authentication was used for user account creation and sign in. Cloud Firestore allowed users to save their food items in specific locations of their kitchen. The Spoonacular API was used to inquire about food nutrition.</p>
+                        <a href="https://github.com/kimberlycao/TracKit"><i class= "fa fa-github" style= "font-size: 48px; color:rgb(107, 165, 219)"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class= "col-md-3 d-flex align-items-stretch">
+                <div class= "card text-center">
+                    <img src="images/mnist.png" class= "card-img-top">
+                    <div class= "card-body">
+                        <h5 class= "card-title">MNIST Model</h5>
+                        <p class = "card-text">Logistic regression model for classifying handwritten digits in Pytorch. </p>
+                        <a href="https://github.com/kimberlycao/MNIST-Model"><i class= "fa fa-github" style= "font-size: 48px; color:rgb(107, 165, 219)"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
         </div>
     </div>
@@ -215,7 +234,7 @@
       strings: [
           "a student.",
           "a developer.",
-          "an ML enthusiast."
+          "a self-declared chef."
       ],
       typeSpeed: 50,
       backSpeed: 50,
